Add h2 database Add springboot data jpa