@@ -5,6 +5,7 @@ import com.example.demo.service.UserService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -12,7 +13,6 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public ResponseEntity<List<User>> users() {
-        List<User> users = List.of(new User(1, "Joe BlackZ"), new User(2, "John Vet"));
-        return ResponseEntity.ok(users);
+        return ResponseEntity.ok(Collections.emptyList());
     }
 }
